Add subject detail page for teachers; implement routing for subject-specific details, including material upload and management features. Enhance API integration for fetching subject details and materials, improving user experience in the teacher dashboard.

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -788,5 +788,42 @@
   "implementationErrorLoadCurriculum": "Failed to load curriculum",
   "implementationErrorLoadSubjects": "Failed to load curriculum subjects",
   "implementationErrorLoadOfferings": "Failed to load offerings",
-  "implementationLinkFromGroup": "Implementation"
+  "implementationLinkFromGroup": "Implementation",
+
+  "backToSubjects": "Back to Subjects",
+  "teacherSubjectDetailNotFound": "Subject not found",
+  "teacherSubjectDetailNotFoundMessage": "Subject with the specified ID was not found or you don't have access to it.",
+  "teacherSubjectDetailErrorLoad": "Could not load subject details",
+  "teacherSubjectTabStudents": "Students",
+  "teacherSubjectTabCourseMaterials": "Course Materials",
+  "teacherSubjectTabLessonMaterials": "Lesson Materials",
+  "teacherSubjectAddMaterial": "Add Material",
+  "teacherSubjectSelectGroup": "Select Group",
+  "teacherSubjectNoMaterials": "No materials",
+  "teacherSubjectNoOfferings": "No subject offerings",
+  "teacherSubjectMaterialFile": "Upload File",
+  "teacherSubjectClickToUpload": "Click to upload or drag and drop",
+  "teacherSubjectUploadFile": "Upload file",
+  "teacherSubjectMaterialTitle": "Material Name",
+  "teacherSubjectMaterialTitlePlaceholder": "Enter material title",
+  "teacherSubjectMaterialDescription": "Description",
+  "teacherSubjectMaterialDescriptionPlaceholder": "Optional description",
+  "teacherSubjectMaterialValidationError": "Please fill in all required fields",
+  "teacherSubjectMaterialUploadError": "File upload error",
+  "teacherSubjectMaterialCreateError": "Error creating material",
+  "teacherSubjectMaterialDownloadError": "File download error",
+  "teacherSubjectMaterialDeleteError": "Error deleting material",
+  "teacherSubjectMaterialDeleteConfirm": "Delete this material?",
+  "credits": "Credits",
+  "week": "Week",
+  "uploaded": "Uploaded",
+  "uploading": "Uploading…",
+  "upload": "Upload",
+  "cancel": "Cancel",
+  "delete": "Delete",
+  "edit": "Edit",
+  "download": "Download",
+  "teacherSubjectTotalHours": "Total Hours",
+  "teacherSubjectDuration": "Duration",
+  "teacherSubjectAssessmentType": "Assessment Type"
 }
