--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -788,5 +788,42 @@
   "implementationErrorLoadCurriculum": "Не удалось загрузить учебный план",
   "implementationErrorLoadSubjects": "Не удалось загрузить предметы плана",
   "implementationErrorLoadOfferings": "Не удалось загрузить офферинги",
-  "implementationLinkFromGroup": "Реализация плана"
+  "implementationLinkFromGroup": "Реализация плана",
+
+  "backToSubjects": "Назад к предметам",
+  "teacherSubjectDetailNotFound": "Предмет не найден",
+  "teacherSubjectDetailNotFoundMessage": "Предмет с указанным идентификатором не найден или у вас нет доступа к нему.",
+  "teacherSubjectDetailErrorLoad": "Не удалось загрузить детальную информацию по предмету",
+  "teacherSubjectTabStudents": "Студенты",
+  "teacherSubjectTabCourseMaterials": "Материалы курса",
+  "teacherSubjectTabLessonMaterials": "Материалы уроков",
+  "teacherSubjectAddMaterial": "Добавить материал",
+  "teacherSubjectSelectGroup": "Выберите группу",
+  "teacherSubjectNoMaterials": "Нет материалов",
+  "teacherSubjectNoOfferings": "Нет реализаций предмета",
+  "teacherSubjectMaterialFile": "Загрузить файл",
+  "teacherSubjectClickToUpload": "Нажмите для загрузки или перетащите файл",
+  "teacherSubjectUploadFile": "Загрузить файл",
+  "teacherSubjectMaterialTitle": "Название материала",
+  "teacherSubjectMaterialTitlePlaceholder": "Введите название материала",
+  "teacherSubjectMaterialDescription": "Описание",
+  "teacherSubjectMaterialDescriptionPlaceholder": "Необязательное описание",
+  "teacherSubjectMaterialValidationError": "Заполните все обязательные поля",
+  "teacherSubjectMaterialUploadError": "Ошибка загрузки файла",
+  "teacherSubjectMaterialCreateError": "Ошибка создания материала",
+  "teacherSubjectMaterialDownloadError": "Ошибка скачивания файла",
+  "teacherSubjectMaterialDeleteError": "Ошибка удаления материала",
+  "teacherSubjectMaterialDeleteConfirm": "Удалить этот материал?",
+  "credits": "Кредиты",
+  "week": "Неделя",
+  "uploaded": "Загружено",
+  "uploading": "Загрузка…",
+  "upload": "Загрузить",
+  "cancel": "Отмена",
+  "delete": "Удалить",
+  "edit": "Редактировать",
+  "download": "Скачать",
+  "teacherSubjectTotalHours": "Всего часов",
+  "teacherSubjectDuration": "Длительность",
+  "teacherSubjectAssessmentType": "Тип контроля"
 }
