--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -788,5 +788,42 @@
   "implementationErrorLoadCurriculum": "加载教学计划失败",
   "implementationErrorLoadSubjects": "加载计划科目失败",
   "implementationErrorLoadOfferings": "加载开设失败",
-  "implementationLinkFromGroup": "课程实施"
+  "implementationLinkFromGroup": "课程实施",
+
+  "backToSubjects": "返回科目",
+  "teacherSubjectDetailNotFound": "未找到科目",
+  "teacherSubjectDetailNotFoundMessage": "未找到指定ID的科目或您无权访问。",
+  "teacherSubjectDetailErrorLoad": "无法加载科目详情",
+  "teacherSubjectTabStudents": "学生",
+  "teacherSubjectTabCourseMaterials": "课程材料",
+  "teacherSubjectTabLessonMaterials": "课程材料",
+  "teacherSubjectAddMaterial": "添加材料",
+  "teacherSubjectSelectGroup": "选择班级",
+  "teacherSubjectNoMaterials": "无材料",
+  "teacherSubjectNoOfferings": "无科目开设",
+  "teacherSubjectMaterialFile": "上传文件",
+  "teacherSubjectClickToUpload": "点击上传或拖放",
+  "teacherSubjectUploadFile": "上传文件",
+  "teacherSubjectMaterialTitle": "材料名称",
+  "teacherSubjectMaterialTitlePlaceholder": "输入材料标题",
+  "teacherSubjectMaterialDescription": "描述",
+  "teacherSubjectMaterialDescriptionPlaceholder": "可选描述",
+  "teacherSubjectMaterialValidationError": "请填写所有必填字段",
+  "teacherSubjectMaterialUploadError": "文件上传错误",
+  "teacherSubjectMaterialCreateError": "创建材料失败",
+  "teacherSubjectMaterialDownloadError": "文件下载错误",
+  "teacherSubjectMaterialDeleteError": "删除材料失败",
+  "teacherSubjectMaterialDeleteConfirm": "删除此材料？",
+  "credits": "学分",
+  "week": "周",
+  "uploaded": "已上传",
+  "uploading": "上传中…",
+  "upload": "上传",
+  "cancel": "取消",
+  "delete": "删除",
+  "edit": "编辑",
+  "download": "下载",
+  "teacherSubjectTotalHours": "总学时",
+  "teacherSubjectDuration": "时长",
+  "teacherSubjectAssessmentType": "考核类型"
 }
