Implement lesson management features for teachers; add lesson details page with routing, API integration for fetching lesson information, and UI enhancements for displaying lesson materials and status. Update styles for improved user experience in the teacher dashboard.

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -88,6 +88,7 @@
   "programCodeRequired": "Code *",
   "programNameRequired": "Name *",
   "programCodePlaceholder": "e.g. CS-BS",
+  "programNamePlaceholder": "Program name",
   "programDegreeLevelPlaceholder": "e.g. Bachelor",
   "programCreating": "Creating…",
   "programErrorCodeRequired": "Code is required",
@@ -362,6 +363,8 @@
   "curriculumSubjectFilterBySemester": "Filter by semester",
   "curriculumSubjectAllSemesters": "All semesters",
   "curriculumSubjectSemesterN": "Semester {{n}}",
+  "curriculumSubjectCourseSemester": "Year {{course}} Semester {{semester}}",
+  "curriculumSubjectSelectSemester": "— Select semester —",
   "curriculumSubjectSubjectsCount": "subjects",
   "curriculumSubjectAdd": "Add subject",
   "curriculumSubjectAddFirst": "Add first subject",
@@ -399,7 +402,7 @@
   "curriculumSubjectSectionEditableParams": "Editable parameters",
   "curriculumSubjectInfoTitle": "Subject information",
   "curriculumSubjectErrorSubjectRequired": "Subject is required",
-  "curriculumSubjectErrorSemesterRequired": "Semester must be at least 1",
+  "curriculumSubjectErrorSemesterRequired": "Semester must be 1 or 2",
   "curriculumSubjectErrorDurationRequired": "Duration is required",
   "curriculumSubjectErrorAssessmentRequired": "Assessment type is required",
   "curriculumSubjectErrorConflict": "This subject is already added to this semester",
@@ -723,6 +726,7 @@
   "implementationSelectGroupPlaceholder": "Select group",
   "implementationSelectSemester": "Semester",
   "implementationSelectSemesterPlaceholder": "Select semester",
+  "implementationSemesterNoOption": "Semester {{number}}",
   "implementationFilterSemester": "Curriculum semester",
   "implementationFilterCourse": "Course",
   "implementationFilterCoursePlaceholder": "Select course",
@@ -744,11 +748,8 @@
   "implementationFormatOnline": "Online",
   "implementationFormatMixed": "Mixed",
   "implementationNotes": "Notes",
-  "implementationOfferingTeachers": "Teachers by role",
-  "implementationOfferingTeachersHint": "Roles: LECTURE, PRACTICE, LAB. SEMINAR uses the main offering teacher.",
-  "implementationAddTeacher": "Add",
-  "implementationRole": "Role",
   "implementationWeeklySlots": "Weekly slots",
+  "implementationSlotsDescription": "Add weekly slots for this subject. By default the lesson type is Seminar: the main teacher and room are taken from the offering above. If you change the lesson type (e.g. to Lecture or Lab), you can choose a different teacher and room for that slot.",
   "implementationAddSlot": "Add slot",
   "implementationSlotTime": "Time",
   "implementationLessonType": "Lesson type",
@@ -780,7 +781,6 @@
   "implementationNoSlotsError": "Add at least one weekly slot before generating lessons.",
   "implementationDuplicateOffering": "An offering for this group and subject already exists.",
   "implementationDuplicateSlot": "A slot with this day, time and type already exists.",
-  "implementationDuplicateTeacherRole": "This teacher with this role is already added.",
   "implementationSave": "Save",
   "implementationSaving": "Saving…",
   "implementationErrorLoadGroups": "Failed to load groups",
@@ -825,5 +825,17 @@
   "download": "Download",
   "teacherSubjectTotalHours": "Total Hours",
   "teacherSubjectDuration": "Duration",
-  "teacherSubjectAssessmentType": "Assessment Type"
+  "teacherSubjectAssessmentType": "Assessment Type",
+  "menuLessons": "Lessons",
+  "lessonDetailsBackToLessons": "Back to Lessons",
+  "lessonDetailsLessonMaterials": "Lesson Materials",
+  "lessonDetailsHomeworkAssignment": "Homework Assignment",
+  "lessonDetailsAddMaterial": "Add",
+  "lessonDetailsEditHomework": "Edit",
+  "lessonDetailsEditLesson": "Edit lesson",
+  "lessonDetailsTeacherLabel": "Teacher",
+  "lessonDetailsDueDate": "Due Date",
+  "lessonDetailsNoMaterials": "No materials",
+  "lessonDetailsNoHomework": "No homework",
+  "lessonDetailsRoomLabel": "Room"
 }
