--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -88,6 +88,7 @@
   "programCodeRequired": "Код *",
   "programNameRequired": "Название *",
   "programCodePlaceholder": "напр. CS-BS",
+  "programNamePlaceholder": "Название программы",
   "programDegreeLevelPlaceholder": "напр. Бакалавр",
   "programCreating": "Создание…",
   "programErrorCodeRequired": "Код обязателен",
@@ -362,6 +363,8 @@
   "curriculumSubjectFilterBySemester": "Фильтр по семестру",
   "curriculumSubjectAllSemesters": "Все семестры",
   "curriculumSubjectSemesterN": "Семестр {{n}}",
+  "curriculumSubjectCourseSemester": "{{course}} курс {{semester}} семестр",
+  "curriculumSubjectSelectSemester": "— Выберите семестр —",
   "curriculumSubjectSubjectsCount": "предметов",
   "curriculumSubjectAdd": "Добавить предмет",
   "curriculumSubjectAddFirst": "Добавить первый предмет",
@@ -399,7 +402,7 @@
   "curriculumSubjectSectionEditableParams": "Редактируемые параметры",
   "curriculumSubjectInfoTitle": "Информация о предмете",
   "curriculumSubjectErrorSubjectRequired": "Выберите предмет",
-  "curriculumSubjectErrorSemesterRequired": "Семестр должен быть не менее 1",
+  "curriculumSubjectErrorSemesterRequired": "Семестр должен быть 1 или 2",
   "curriculumSubjectErrorDurationRequired": "Укажите длительность",
   "curriculumSubjectErrorAssessmentRequired": "Выберите тип контроля",
   "curriculumSubjectErrorConflict": "Этот предмет уже добавлен в данный семестр",
@@ -723,6 +726,7 @@
   "implementationSelectGroupPlaceholder": "Выберите группу",
   "implementationSelectSemester": "Семестр",
   "implementationSelectSemesterPlaceholder": "Выберите семестр",
+  "implementationSemesterNoOption": "Семестр {{number}}",
   "implementationFilterSemester": "Семестр учебного плана",
   "implementationFilterCourse": "Курс",
   "implementationFilterCoursePlaceholder": "Выберите курс",
@@ -744,11 +748,8 @@
   "implementationFormatOnline": "Онлайн",
   "implementationFormatMixed": "Смешанно",
   "implementationNotes": "Заметки",
-  "implementationOfferingTeachers": "Преподаватели по ролям",
-  "implementationOfferingTeachersHint": "Роли: LECTURE, PRACTICE, LAB. SEMINAR использует основного преподавателя офферинга.",
-  "implementationAddTeacher": "Добавить",
-  "implementationRole": "Роль",
   "implementationWeeklySlots": "Недельные слоты",
+  "implementationSlotsDescription": "Добавьте недельные слоты по предмету. По умолчанию тип занятия — семинар: преподаватель и аудитория берутся из офферинга выше. Если вы меняете тип занятия (например, на лекцию или лабораторную), можно выбрать другого преподавателя и аудиторию для этого слота.",
   "implementationAddSlot": "Добавить слот",
   "implementationSlotTime": "Время",
   "implementationLessonType": "Тип занятия",
@@ -780,7 +781,6 @@
   "implementationNoSlotsError": "Добавьте хотя бы один недельный слот перед генерацией уроков.",
   "implementationDuplicateOffering": "Офферинг для этой группы и предмета уже существует.",
   "implementationDuplicateSlot": "Слот с таким днём, временем и типом уже есть.",
-  "implementationDuplicateTeacherRole": "Этот преподаватель с такой ролью уже добавлен.",
   "implementationSave": "Сохранить",
   "implementationSaving": "Сохранение…",
   "implementationErrorLoadGroups": "Не удалось загрузить группы",
@@ -825,5 +825,17 @@
   "download": "Скачать",
   "teacherSubjectTotalHours": "Всего часов",
   "teacherSubjectDuration": "Длительность",
-  "teacherSubjectAssessmentType": "Тип контроля"
+  "teacherSubjectAssessmentType": "Тип контроля",
+  "menuLessons": "Уроки",
+  "lessonDetailsBackToLessons": "К урокам",
+  "lessonDetailsLessonMaterials": "Материалы урока",
+  "lessonDetailsHomeworkAssignment": "Домашнее задание",
+  "lessonDetailsAddMaterial": "Добавить",
+  "lessonDetailsEditHomework": "Изменить",
+  "lessonDetailsEditLesson": "Изменить урок",
+  "lessonDetailsTeacherLabel": "Преподаватель",
+  "lessonDetailsDueDate": "Срок сдачи",
+  "lessonDetailsNoMaterials": "Нет материалов",
+  "lessonDetailsNoHomework": "Нет домашних заданий",
+  "lessonDetailsRoomLabel": "Аудитория"
 }
