--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -88,6 +88,7 @@
   "programCodeRequired": "代码 *",
   "programNameRequired": "名称 *",
   "programCodePlaceholder": "如 CS-BS",
+  "programNamePlaceholder": "项目名称",
   "programDegreeLevelPlaceholder": "如 学士",
   "programCreating": "创建中…",
   "programErrorCodeRequired": "代码必填",
@@ -362,6 +363,8 @@
   "curriculumSubjectFilterBySemester": "按学期筛选",
   "curriculumSubjectAllSemesters": "所有学期",
   "curriculumSubjectSemesterN": "第{{n}}学期",
+  "curriculumSubjectCourseSemester": "第{{course}}学年 第{{semester}}学期",
+  "curriculumSubjectSelectSemester": "— 请选择学期 —",
   "curriculumSubjectSubjectsCount": "门课程",
   "curriculumSubjectAdd": "添加课程",
   "curriculumSubjectAddFirst": "添加第一门课程",
@@ -399,7 +402,7 @@
   "curriculumSubjectSectionEditableParams": "可编辑参数",
   "curriculumSubjectInfoTitle": "课程信息",
   "curriculumSubjectErrorSubjectRequired": "请选择课程",
-  "curriculumSubjectErrorSemesterRequired": "学期必须大于等于1",
+  "curriculumSubjectErrorSemesterRequired": "学期必须为1或2",
   "curriculumSubjectErrorDurationRequired": "请填写周数",
   "curriculumSubjectErrorAssessmentRequired": "请选择考核类型",
   "curriculumSubjectErrorConflict": "该课程已添加到此学期",
@@ -723,6 +726,7 @@
   "implementationSelectGroupPlaceholder": "选择班级",
   "implementationSelectSemester": "学期",
   "implementationSelectSemesterPlaceholder": "选择学期",
+  "implementationSemesterNoOption": "第{{number}}学期",
   "implementationFilterSemester": "教学计划学期",
   "implementationFilterCourse": "年级",
   "implementationFilterCoursePlaceholder": "选择年级",
@@ -744,11 +748,8 @@
   "implementationFormatOnline": "线上",
   "implementationFormatMixed": "混合",
   "implementationNotes": "备注",
-  "implementationOfferingTeachers": "按角色教师",
-  "implementationOfferingTeachersHint": "角色：LECTURE、PRACTICE、LAB。SEMINAR 使用开设的主教师。",
-  "implementationAddTeacher": "添加",
-  "implementationRole": "角色",
   "implementationWeeklySlots": "周时段",
+  "implementationSlotsDescription": "为本课程添加周时段。默认课程类型为研讨：教师和教室来自上方的开设。若更改课程类型（如讲座或实验），可为该时段选择其他教师和教室。",
   "implementationAddSlot": "添加时段",
   "implementationSlotTime": "时间",
   "implementationLessonType": "课程类型",
@@ -780,7 +781,6 @@
   "implementationNoSlotsError": "生成课程前请至少添加一个周时段。",
   "implementationDuplicateOffering": "该班级和科目已有开设。",
   "implementationDuplicateSlot": "此时段（日/时间/类型）已存在。",
-  "implementationDuplicateTeacherRole": "该教师与此角色已添加。",
   "implementationSave": "保存",
   "implementationSaving": "保存中…",
   "implementationErrorLoadGroups": "加载班级失败",
@@ -825,5 +825,17 @@
   "download": "下载",
   "teacherSubjectTotalHours": "总学时",
   "teacherSubjectDuration": "时长",
-  "teacherSubjectAssessmentType": "考核类型"
+  "teacherSubjectAssessmentType": "考核类型",
+  "menuLessons": "课程",
+  "lessonDetailsBackToLessons": "返回课程",
+  "lessonDetailsLessonMaterials": "课程材料",
+  "lessonDetailsHomeworkAssignment": "作业",
+  "lessonDetailsAddMaterial": "添加",
+  "lessonDetailsEditHomework": "编辑",
+  "lessonDetailsEditLesson": "编辑课程",
+  "lessonDetailsTeacherLabel": "教师",
+  "lessonDetailsDueDate": "截止日期",
+  "lessonDetailsNoMaterials": "暂无材料",
+  "lessonDetailsNoHomework": "暂无作业",
+  "lessonDetailsRoomLabel": "教室"
 }
