Refactor curriculum model to replace start and end year fields with a single durationYears field. Update related API requests and UI components to reflect this change, enhancing consistency in curriculum management. Add localization support for duration years in multiple languages.

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -138,6 +138,10 @@
   "curriculumCreatePageTitle": "Create curriculum",
   "curriculumVersionRequired": "Version *",
   "curriculumStartYearRequired": "Start year *",
+  "curriculumDurationYears": "{{years}}",
+  "curriculumDurationYearsLabel": "Duration",
+  "curriculumDurationYearsUnit": "years",
+  "curriculumDurationYearsRequired": "Duration (years) *",
   "curriculumVersionPlaceholder": "e.g. 2024",
   "curriculumNotesPlaceholder": "Optional notes",
   "curriculumCreating": "Creating…",
@@ -145,6 +149,7 @@
   "curriculumErrorStartYearRange": "Start year must be between 1900 and 2100",
   "curriculumErrorEndYearRange": "End year must be between 1900 and 2100",
   "curriculumErrorEndYearGteStartYear": "End year must be greater than or equal to start year",
+  "curriculumErrorDurationYearsRange": "Duration must be between 1 and 10 years",
   "curriculumErrorVersionExists": "A curriculum with this version already exists for this program",
   "curriculumErrorValidation": "Please check the fields and fix errors.",
   "curriculumErrorProgramNotFound": "Program not found. Please go back to the program list.",
