--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -138,6 +138,10 @@
   "curriculumCreatePageTitle": "Создать учебный план",
   "curriculumVersionRequired": "Версия *",
   "curriculumStartYearRequired": "Год начала *",
+  "curriculumDurationYears": "{{years}}",
+  "curriculumDurationYearsLabel": "Продолжительность",
+  "curriculumDurationYearsUnit": "лет",
+  "curriculumDurationYearsRequired": "Продолжительность (лет) *",
   "curriculumVersionPlaceholder": "напр. 2024",
   "curriculumNotesPlaceholder": "Необязательные заметки",
   "curriculumCreating": "Создание…",
@@ -145,6 +149,7 @@
   "curriculumErrorStartYearRange": "Год начала должен быть от 1900 до 2100",
   "curriculumErrorEndYearRange": "Год окончания должен быть от 1900 до 2100",
   "curriculumErrorEndYearGteStartYear": "Год окончания должен быть больше или равен году начала",
+  "curriculumErrorDurationYearsRange": "Продолжительность должна быть от 1 до 10 лет",
   "curriculumErrorVersionExists": "Учебный план с такой версией уже существует для этой программы",
   "curriculumErrorValidation": "Проверьте заполненные поля и исправьте ошибки.",
   "curriculumErrorProgramNotFound": "Программа не найдена. Вернитесь к списку программ.",
