--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -138,6 +138,10 @@
   "curriculumCreatePageTitle": "新建教学计划",
   "curriculumVersionRequired": "版本 *",
   "curriculumStartYearRequired": "起始年份 *",
+  "curriculumDurationYears": "{{years}}",
+  "curriculumDurationYearsLabel": "持续时间",
+  "curriculumDurationYearsUnit": "年",
+  "curriculumDurationYearsRequired": "持续时间（年）*",
   "curriculumVersionPlaceholder": "如 2024",
   "curriculumNotesPlaceholder": "可选备注",
   "curriculumCreating": "创建中…",
@@ -145,6 +149,7 @@
   "curriculumErrorStartYearRange": "起始年份须在 1900–2100 之间",
   "curriculumErrorEndYearRange": "结束年份须在 1900–2100 之间",
   "curriculumErrorEndYearGteStartYear": "结束年份须大于或等于起始年份",
+  "curriculumErrorDurationYearsRange": "持续时间须在 1–10 年之间",
   "curriculumErrorVersionExists": "该项目已存在相同版本的教学计划",
   "curriculumErrorValidation": "请检查并修正填写错误。",
   "curriculumErrorProgramNotFound": "未找到项目。请返回项目列表。",
