Add lesson material management features; implement LessonMaterialModal for creating and editing lesson materials, including file uploads and deletion functionality. Integrate modal into lesson details page with appropriate state management and API calls, enhancing user experience in lesson material management.

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -827,6 +827,8 @@
   "cancel": "Cancel",
   "delete": "Delete",
   "edit": "Edit",
+  "save": "Save",
+  "create": "Create",
   "download": "Download",
   "teacherSubjectTotalHours": "Total Hours",
   "teacherSubjectDuration": "Duration",
@@ -842,5 +844,34 @@
   "lessonDetailsDueDate": "Due Date",
   "lessonDetailsNoMaterials": "No materials",
   "lessonDetailsNoHomework": "No homework",
-  "lessonDetailsRoomLabel": "Room"
+  "lessonDetailsRoomLabel": "Room",
+  "lessonMaterialCreateTitle": "Create Lesson Material",
+  "lessonMaterialEditTitle": "Edit Lesson Material",
+  "lessonMaterialName": "Name",
+  "lessonMaterialNamePlaceholder": "Enter material name",
+  "lessonMaterialDescription": "Description",
+  "lessonMaterialDescriptionPlaceholder": "Enter description (optional)",
+  "lessonMaterialPublishedAt": "Published At",
+  "lessonMaterialFiles": "Files",
+  "lessonMaterialClickToUpload": "Click or drag files here to upload",
+  "lessonMaterialUploadFiles": "Upload Files",
+  "lessonMaterialExistingFiles": "Existing Files",
+  "lessonMaterialAddFiles": "Add Files",
+  "lessonMaterialFile": "File",
+  "lessonMaterialUntitled": "Untitled",
+  "lessonMaterialNameRequired": "Name is required",
+  "lessonMaterialNameTooLong": "Name must not exceed 500 characters",
+  "lessonMaterialDescriptionTooLong": "Description must not exceed 5000 characters",
+  "lessonMaterialPublishedAtRequired": "Published date is required",
+  "lessonMaterialPermissionDenied": "You don't have permission to modify this lesson material",
+  "lessonMaterialNotFound": "Lesson material not found",
+  "lessonMaterialSaveError": "Failed to save lesson material. Please try again.",
+  "lessonMaterialCreatePermissionDenied": "Only teachers and administrators can create lesson materials",
+  "lessonMaterialLessonNotFound": "Lesson not found",
+  "lessonMaterialDeleteTitle": "Delete Material",
+  "lessonMaterialDeleteMessage": "Are you sure you want to delete the material \"{{name}}\"?",
+  "lessonMaterialFileDeleteTitle": "Delete File",
+  "lessonMaterialFileDeleteMessage": "Are you sure you want to delete this file?",
+  "lessonMaterialDeleteError": "Failed to delete material. Please try again.",
+  "lessonMaterialFileDeleteError": "Failed to delete file. Please try again."
 }
