--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -827,6 +827,8 @@
   "cancel": "Отмена",
   "delete": "Удалить",
   "edit": "Редактировать",
+  "save": "Сохранить",
+  "create": "Создать",
   "download": "Скачать",
   "teacherSubjectTotalHours": "Всего часов",
   "teacherSubjectDuration": "Длительность",
@@ -842,5 +844,34 @@
   "lessonDetailsDueDate": "Срок сдачи",
   "lessonDetailsNoMaterials": "Нет материалов",
   "lessonDetailsNoHomework": "Нет домашних заданий",
-  "lessonDetailsRoomLabel": "Аудитория"
+  "lessonDetailsRoomLabel": "Аудитория",
+  "lessonMaterialCreateTitle": "Создать материал урока",
+  "lessonMaterialEditTitle": "Редактировать материал урока",
+  "lessonMaterialName": "Название",
+  "lessonMaterialNamePlaceholder": "Введите название материала",
+  "lessonMaterialDescription": "Описание",
+  "lessonMaterialDescriptionPlaceholder": "Введите описание (необязательно)",
+  "lessonMaterialPublishedAt": "Дата публикации",
+  "lessonMaterialFiles": "Файлы",
+  "lessonMaterialClickToUpload": "Нажмите или перетащите файлы сюда для загрузки",
+  "lessonMaterialUploadFiles": "Загрузить файлы",
+  "lessonMaterialExistingFiles": "Существующие файлы",
+  "lessonMaterialAddFiles": "Добавить файлы",
+  "lessonMaterialFile": "Файл",
+  "lessonMaterialUntitled": "Без названия",
+  "lessonMaterialNameRequired": "Название обязательно",
+  "lessonMaterialNameTooLong": "Название не должно превышать 500 символов",
+  "lessonMaterialDescriptionTooLong": "Описание не должно превышать 5000 символов",
+  "lessonMaterialPublishedAtRequired": "Дата публикации обязательна",
+  "lessonMaterialPermissionDenied": "У вас нет прав на изменение этого материала урока",
+  "lessonMaterialNotFound": "Материал урока не найден",
+  "lessonMaterialSaveError": "Не удалось сохранить материал урока. Попробуйте снова.",
+  "lessonMaterialCreatePermissionDenied": "Только преподаватели и администраторы могут создавать материалы урока",
+  "lessonMaterialLessonNotFound": "Урок не найден",
+  "lessonMaterialDeleteTitle": "Удалить материал",
+  "lessonMaterialDeleteMessage": "Вы уверены, что хотите удалить материал \"{{name}}\"?",
+  "lessonMaterialFileDeleteTitle": "Удалить файл",
+  "lessonMaterialFileDeleteMessage": "Вы уверены, что хотите удалить этот файл?",
+  "lessonMaterialDeleteError": "Не удалось удалить материал. Попробуйте снова.",
+  "lessonMaterialFileDeleteError": "Не удалось удалить файл. Попробуйте снова."
 }
