--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -827,6 +827,8 @@
   "cancel": "取消",
   "delete": "删除",
   "edit": "编辑",
+  "save": "保存",
+  "create": "创建",
   "download": "下载",
   "teacherSubjectTotalHours": "总学时",
   "teacherSubjectDuration": "时长",
@@ -842,5 +844,34 @@
   "lessonDetailsDueDate": "截止日期",
   "lessonDetailsNoMaterials": "暂无材料",
   "lessonDetailsNoHomework": "暂无作业",
-  "lessonDetailsRoomLabel": "教室"
+  "lessonDetailsRoomLabel": "教室",
+  "lessonMaterialCreateTitle": "创建课程材料",
+  "lessonMaterialEditTitle": "编辑课程材料",
+  "lessonMaterialName": "名称",
+  "lessonMaterialNamePlaceholder": "输入材料名称",
+  "lessonMaterialDescription": "描述",
+  "lessonMaterialDescriptionPlaceholder": "输入描述（可选）",
+  "lessonMaterialPublishedAt": "发布日期",
+  "lessonMaterialFiles": "文件",
+  "lessonMaterialClickToUpload": "点击或拖拽文件到这里上传",
+  "lessonMaterialUploadFiles": "上传文件",
+  "lessonMaterialExistingFiles": "现有文件",
+  "lessonMaterialAddFiles": "添加文件",
+  "lessonMaterialFile": "文件",
+  "lessonMaterialUntitled": "未命名",
+  "lessonMaterialNameRequired": "名称是必需的",
+  "lessonMaterialNameTooLong": "名称不能超过500个字符",
+  "lessonMaterialDescriptionTooLong": "描述不能超过5000个字符",
+  "lessonMaterialPublishedAtRequired": "发布日期是必需的",
+  "lessonMaterialPermissionDenied": "您没有权限修改此课程材料",
+  "lessonMaterialNotFound": "未找到课程材料",
+  "lessonMaterialSaveError": "保存课程材料失败。请重试。",
+  "lessonMaterialCreatePermissionDenied": "只有教师和管理员可以创建课程材料",
+  "lessonMaterialLessonNotFound": "未找到课程",
+  "lessonMaterialDeleteTitle": "删除材料",
+  "lessonMaterialDeleteMessage": "您确定要删除材料\"{{name}}\"吗？",
+  "lessonMaterialFileDeleteTitle": "删除文件",
+  "lessonMaterialFileDeleteMessage": "您确定要删除此文件吗？",
+  "lessonMaterialDeleteError": "删除材料失败。请重试。",
+  "lessonMaterialFileDeleteError": "删除文件失败。请重试。"
 }
