Add homework management features; implement HomeworkModal for creating, editing, and deleting homework assignments. Integrate modal into lesson details page with appropriate state management and API calls, enhancing user experience in homework management.

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -873,5 +873,36 @@
   "lessonMaterialFileDeleteTitle": "Delete File",
   "lessonMaterialFileDeleteMessage": "Are you sure you want to delete this file?",
   "lessonMaterialDeleteError": "Failed to delete material. Please try again.",
-  "lessonMaterialFileDeleteError": "Failed to delete file. Please try again."
+  "lessonMaterialFileDeleteError": "Failed to delete file. Please try again.",
+  "lessonDetailsAddHomework": "Add Homework",
+  "homeworkCreateTitle": "Create Homework",
+  "homeworkEditTitle": "Edit Homework",
+  "homeworkTitle": "Title",
+  "homeworkTitlePlaceholder": "Enter homework title",
+  "homeworkDescription": "Description",
+  "homeworkDescriptionPlaceholder": "Enter description (optional)",
+  "homeworkPoints": "Points",
+  "homeworkPointsPlaceholder": "Enter maximum points (optional)",
+  "homeworkPointsHint": "Maximum points for this homework (optional)",
+  "homeworkFile": "File",
+  "homeworkClickToUpload": "Click or drag file here to upload",
+  "homeworkUploadFile": "Upload File",
+  "homeworkFileId": "File ID",
+  "homeworkFileIdPlaceholder": "Enter file ID (if file already uploaded)",
+  "homeworkFileIdHint": "If you already have a file ID from Document API, enter it here",
+  "homeworkTitleRequired": "Title is required",
+  "homeworkTitleTooLong": "Title must not exceed 500 characters",
+  "homeworkDescriptionTooLong": "Description must not exceed 5000 characters",
+  "homeworkPointsInvalid": "Points must be a non-negative number",
+  "homeworkPermissionDenied": "You don't have permission to modify this homework",
+  "homeworkNotFound": "Homework not found",
+  "homeworkSaveError": "Failed to save homework. Please try again.",
+  "homeworkCreatePermissionDenied": "Only teachers and administrators can create homework",
+  "homeworkLessonNotFound": "Lesson not found",
+  "homeworkDeleteTitle": "Delete Homework",
+  "homeworkDeleteMessage": "Are you sure you want to delete the homework \"{{title}}\"?",
+  "homeworkDeleteError": "Failed to delete homework. Please try again.",
+  "homeworkUntitled": "Untitled",
+  "remove": "Remove",
+  "saving": "Saving…"
 }
