--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -873,5 +873,36 @@
   "lessonMaterialFileDeleteTitle": "Удалить файл",
   "lessonMaterialFileDeleteMessage": "Вы уверены, что хотите удалить этот файл?",
   "lessonMaterialDeleteError": "Не удалось удалить материал. Попробуйте снова.",
-  "lessonMaterialFileDeleteError": "Не удалось удалить файл. Попробуйте снова."
+  "lessonMaterialFileDeleteError": "Не удалось удалить файл. Попробуйте снова.",
+  "lessonDetailsAddHomework": "Добавить домашнее задание",
+  "homeworkCreateTitle": "Создать домашнее задание",
+  "homeworkEditTitle": "Редактировать домашнее задание",
+  "homeworkTitle": "Название",
+  "homeworkTitlePlaceholder": "Введите название задания",
+  "homeworkDescription": "Описание",
+  "homeworkDescriptionPlaceholder": "Введите описание (необязательно)",
+  "homeworkPoints": "Баллы",
+  "homeworkPointsPlaceholder": "Введите максимальное количество баллов (необязательно)",
+  "homeworkPointsHint": "Максимальное количество баллов за это задание (необязательно)",
+  "homeworkFile": "Файл",
+  "homeworkClickToUpload": "Нажмите или перетащите файл сюда для загрузки",
+  "homeworkUploadFile": "Загрузить файл",
+  "homeworkFileId": "ID файла",
+  "homeworkFileIdPlaceholder": "Введите ID файла (если файл уже загружен)",
+  "homeworkFileIdHint": "Если у вас уже есть ID файла из Document API, введите его здесь",
+  "homeworkTitleRequired": "Название обязательно",
+  "homeworkTitleTooLong": "Название не должно превышать 500 символов",
+  "homeworkDescriptionTooLong": "Описание не должно превышать 5000 символов",
+  "homeworkPointsInvalid": "Баллы должны быть неотрицательным числом",
+  "homeworkPermissionDenied": "У вас нет прав на изменение этого домашнего задания",
+  "homeworkNotFound": "Домашнее задание не найдено",
+  "homeworkSaveError": "Не удалось сохранить домашнее задание. Попробуйте снова.",
+  "homeworkCreatePermissionDenied": "Только преподаватели и администраторы могут создавать домашние задания",
+  "homeworkLessonNotFound": "Урок не найден",
+  "homeworkDeleteTitle": "Удалить домашнее задание",
+  "homeworkDeleteMessage": "Вы уверены, что хотите удалить домашнее задание \"{{title}}\"?",
+  "homeworkDeleteError": "Не удалось удалить домашнее задание. Попробуйте снова.",
+  "homeworkUntitled": "Без названия",
+  "remove": "Удалить",
+  "saving": "Сохранение…"
 }
