--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -873,5 +873,36 @@
   "lessonMaterialFileDeleteTitle": "删除文件",
   "lessonMaterialFileDeleteMessage": "您确定要删除此文件吗？",
   "lessonMaterialDeleteError": "删除材料失败。请重试。",
-  "lessonMaterialFileDeleteError": "删除文件失败。请重试。"
+  "lessonMaterialFileDeleteError": "删除文件失败。请重试。",
+  "lessonDetailsAddHomework": "添加作业",
+  "homeworkCreateTitle": "创建作业",
+  "homeworkEditTitle": "编辑作业",
+  "homeworkTitle": "标题",
+  "homeworkTitlePlaceholder": "输入作业标题",
+  "homeworkDescription": "描述",
+  "homeworkDescriptionPlaceholder": "输入描述（可选）",
+  "homeworkPoints": "分数",
+  "homeworkPointsPlaceholder": "输入最高分数（可选）",
+  "homeworkPointsHint": "此作业的最高分数（可选）",
+  "homeworkFile": "文件",
+  "homeworkClickToUpload": "点击或拖拽文件到这里上传",
+  "homeworkUploadFile": "上传文件",
+  "homeworkFileId": "文件ID",
+  "homeworkFileIdPlaceholder": "输入文件ID（如果文件已上传）",
+  "homeworkFileIdHint": "如果您已有Document API的文件ID，请在此输入",
+  "homeworkTitleRequired": "标题是必需的",
+  "homeworkTitleTooLong": "标题不能超过500个字符",
+  "homeworkDescriptionTooLong": "描述不能超过5000个字符",
+  "homeworkPointsInvalid": "分数必须是非负数",
+  "homeworkPermissionDenied": "您没有权限修改此作业",
+  "homeworkNotFound": "未找到作业",
+  "homeworkSaveError": "保存作业失败。请重试。",
+  "homeworkCreatePermissionDenied": "只有教师和管理员可以创建作业",
+  "homeworkLessonNotFound": "未找到课程",
+  "homeworkDeleteTitle": "删除作业",
+  "homeworkDeleteMessage": "您确定要删除作业\"{{title}}\"吗？",
+  "homeworkDeleteError": "删除作业失败。请重试。",
+  "homeworkUntitled": "未命名",
+  "remove": "移除",
+  "saving": "保存中…"
 }
